confik-macros/tests/trybuild/fail-secret-extra-attr.stderr
error: Unexpected type `string`
 --> tests/trybuild/fail-secret-extra-attr.rs:3:23
  |
3 |     #[confik(secret = "foo")]
  |                       ^^^^^
