confik-macros/tests/trybuild/fail-secret-extra-attr.rs
#[derive(confik::Configuration)]
struct Config {
    #[confik(secret = "foo")]
    _param: String,
}

fn main() {}
